[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "json",
    "uuid",
    "bigdecimal",
    "derive",
    "macros",
] }
ntex = { version = "2", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json"] }

[build]
rustflags = ["-Z", "threads=8"]

[profile.dev.build-override]
opt-level = 3
incremental = false
