[package]
name = "server"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-Z", "threads=8"]

[profile.dev.build-override]
opt-level = 3


[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7.5"
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
